# montecarlo

./: README.md  montecarlo.cabal  stack.yaml
app/: Main.hs
src/: Montecarlo.hs  Pricing.hs
test/: Spec.hs
