name:                montecarlo
version:             0.1.0.0
homepage:            http://github.com/dlgd/montecarlo
license:             BSD3
author:              dlgd
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Montecarlo
  ghc-options:         -Wall -O2 -fwarn-tabs -eventlog
  build-depends:       base >= 4.7 && < 5
                     , normaldistribution
                     , parallel
  default-language:    Haskell2010

executable montecarlo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -eventlog
  build-depends:       base
                     , montecarlo
  default-language:    Haskell2010

test-suite montecarlo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , montecarlo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dlgd/montecarlo
