name:                montecarlo
version:             0.1.0.0
homepage:            http://github.com/dlgd/montecarlo
license:             BSD3
author:              dlgd
category:            Control
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
                   README.md


library
  hs-source-dirs:      src
  exposed-modules:     Montecarlo
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , parallel
                     , random
                     , mtl
  default-language:    Haskell2010


test-suite montecarlo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , montecarlo
                     , random
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dlgd/montecarlo
